dh-make-perl (0.40) UNRELEASED; urgency=low

  * use debhelper compatibility level 5 (and respective build-dependency on
    debhelper) for generated packages

 -- Damyan Ivanov <dmn@debian.org>  Wed, 19 Mar 2008 09:44:05 +0200

dh-make-perl (0.39) unstable; urgency=low

  [ gregor herrmann ]
  * Set debhelper compatibility level of the created package to 6.
  * Add comment and additional spaces to the created watch files to make the
    pattern easier to read and understand.
  * Fix small error in output of create_copyright().
  * Automatically find examples/eg/samples/sample directories for
    dh_installexamples; otherwise remove empty dh_installexamples line from
    debian/rules.
  * Format the contributors' section in the POD with over/item/back, in the
    verbatim paragraph the formatting codes were not rendered; thanks to
    Nacho Barrientos Arias for spotting.
  * Don't add a trailing comma to Depends: if there are no extra
    dependencies.

  [ Damyan Ivanov ]
  * rules.* templates: add "install" to phony targets list
  * dh-make-perl: when storing versioned dependencies, remove any leading 'v'

  [ Martín Ferrari ]
  * rules.* templates: Make source and diff .PHONY targets too, prettify a
    little: remove unneeded whitespace, make PERL a conditional assignment
    instead of an "#if" block, align the assignment of the variables.

  [ Roberto C. Sanchez ]
  * Add /me to uploaders
  * Remove obsolete README.Debian
  * Update copyright to name GPL-2 explicitly (GPL now links to GPL-3 on sid)

 -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 18 Mar 2008 18:47:31 -0400

dh-make-perl (0.38) unstable; urgency=low

  [ gregor herrmann ]
  * Fix inline documentation: it's Vcs-Svn and Vcs-Browser nowadays.

  [ Damyan Ivanov ]
  * all templates: use $(TMP) in the comment before the install
  * MakeMaker templates: do not set INSTALLVENDORARCH and VENDORARCHEXP when
    configuring. Instead, verbosely remove the empty dirs if they exist. Perl